# PythonAPI_Genet

./: README.md  pyproject.toml  requirements.txt
Binance/: .gitignore  README.md  client.py  pyproject.toml
Binance/client/: client.py
Binance/client/examples/: submit_order.py
Binance/server/: main.py
Binance/server/api/: public.py
Binance/server/core/: TWAPOrder.py  twap_engine.py
Binance/server/tests/: test_websocket.py
Kraken/: README.md
Kraken/server/core/: market_data.py  twap_engine.py
Kraken/server/tests/: test_api.py  test_twap.py
Kraken/server/websocket/: websocket_manager.py
client/: client.py
server/api/: authenticated.py  public.py
server/core/: market_data.py
