[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "server"
version = "0.4.3"
description = "Server application TWAP_Order"
authors = ["Henri KRETZ"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
websockets = "^11.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
requests = "^2.31.0"
pydantic = "^2.6.0"

[tool.poetry.scripts]
server = "server.main:app"





